NotReadableError when calling getUserMedia https://bugs.webkit.org/show_bug.cgi?id=188309 <rdar://problem/42916838>

Reviewed by Brent Fulgham.

* UIProcess/UserMediaProcessManager.cpp:
(WebKit::UserMediaProcessManager::willCreateMediaStream): Deal with audio and video sandbox
extensions being issued at different times. Use new ProcessState methods.
(WebKit::UserMediaProcessManager::endedCaptureSession): Use new ProcessState methods.


Canonical link: https://commits.webkit.org/203494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234662 268f45cc-cd09-0410-ab3c-d52691b4dbfc